--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="pop_up_body" id="pop_up_body">
                 <p>If my resume interests you, please contact me</p>
                 <form action="">
-                    <input type="text" name="entry.797624838" placeholder="Your Name" class="modal_name">
+                    <input type="text" name="name" placeholder="Your Name" class="modal_name">
                     <input type="text" name="phone" placeholder="Phone number" class="modal_phone">
                     <input type="text" name="email" placeholder="Your email address" class="modal_email">
                     <button class="modal_btn">Call me</button>
