--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="text" name="name" placeholder="Your Name" class="modal_name">
                     <input type="text" name="phone" placeholder="Phone number" class="modal_phone">
                     <input type="text" name="email" placeholder="Your email address" class="modal_email">
-                    <button class="modal_btn">Call me</button>
+                    <button type="submit" class="modal_btn">Call me</button>
                 </form>
                 <div class="pop_up_close" id="pop_up_close">&times;</div>
             </div>
