--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <input type="text" name="email" placeholder="Your email address" class="modal_email">
                     <button type="submit" class="modal_btn">Call me</button>
                 </form>
-                <div class="pop_up_close" id="pop_up_close">&times</div>
+                <div class="pop_up_close" id="pop_up_close">X</div>
             </div>
         </div>
     </div>
@@ -163,7 +163,7 @@
         </div>
     </section>
     <section id="footer">
-        <div class="footer_copyright">&copy 2021 Akmaral Sarsekeyeva, Inc.</div>
+        <div class="footer_copyright">2021 Akmaral Sarsekeyeva, Inc.</div>
     </section>
 
 
