--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <div class="pop_up_body" id="pop_up_body">
                 <p>If my resume interests you, please contact me</p>
                 <form action="">
-                    <input type="text" name="entry.797624838" placeholder="Your Name" class="modal_name">
+                    <input type="text" name="name" placeholder="Your Name" class="modal_name">
                     <input type="text" name="phone" placeholder="Phone number" class="modal_phone">
                     <input type="text" name="email" placeholder="Your email address" class="modal_email">
                     <button class="modal_btn">Call me</button>
                 </form>
-                <div class="pop_up_close" id="pop_up_close">&times;</div>
+                <div class="pop_up_close" id="pop_up_close">X</div>
             </div>
         </div>
     </div>
@@ -163,7 +163,7 @@
         </div>
     </section>
     <section id="footer">
-        <div class="footer_copyright">&copy 2021 Akmaral Sarsekeyeva, Inc.</div>
+        <div class="footer_copyright">2021 Akmaral Sarsekeyeva, Inc.</div>
     </section>
 
 
